-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 270403) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

27042003 (v2.2.3)  -** stable release **-
	- added: support for both -0.64 and 0.65- JACK versions; 
		 transport functionality is only enabled with the 
		 newer versions
	- added: automatic query of child object sample rate by 
		 giving 'auto' as 2nd arg to resample object
	- changed: by default python version of ECI is used; the C 
		   python module for ECI, pyecasound, is only compiled
		   if --enable-pyecasound is specified
	- changed: jack_auto,dstclient input/output object now 
		   automatically connects to matching ports of JACK
		   dstclient (no longer requires dstclient to have
		   in_X/out_X port names)
	- fixed: yet another fix for creating temporary files in
                 ecanormalize and ecafixdc; now both LOGNAME and USER
		 are checked for a valid user name
	- fixed: prefer usleep over nanosleep on cygwin; avoids 
		 the excessive-cpu-usage problem
	- fixed: work-around for a bug in the pcm plugin of ALSA 0.9.1
		 and earlier that caused recording/playback to
		 stop to an audio i/o error
	- fixed: inconsistencies in how configure --disable/enable-feat
		 options were handled
	- fixed: if pyecasound was disabled at build time, make
		 install target failed in ecasound/pyecasound
18032003 (v2.2.2)  -** stable release **-
	- edi-entries: edi-35 and edi-36 added